--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,3 +99,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_gen:
+  integrations:
+    flutter_svg: true
