--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   dotted_border: ^2.1.0
   carousel_slider: ^4.2.1
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
