--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dotted_border: ^2.1.0
   carousel_slider: ^4.2.1
   flutter_svg: ^2.0.10+1
+  smooth_page_indicator: ^1.2.0+3
 
 dev_dependencies:
   flutter_test:
